--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=InterPlacemetBackend
 server.port=8082
 
+## Spring Security Default Configuration
+#spring.security.user.name=admin      
+#spring.security.user.password=admin
+##spring.security.user.roles=USER    
+
+
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/interplacement
 spring.datasource.username=root
@@ -10,6 +16,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.properties.hibernate.format_sql=true
