--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,20 +5,20 @@ server.port=8082
 #spring.security.user.name=admin      
 #spring.security.user.password=admin
 ##spring.security.user.roles=USER    
+#spring.main.allow-bean-definition-overriding=true
 
+#logging.level.org.springframework.security=DEBUG
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/interplacement
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-# Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-
-
+## Database Configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/interplacement
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#
+## Hibernate Configuration
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.properties.hibernate.format_sql=true
@@ -30,3 +30,8 @@ spring.jpa.show-sql=true
 #
 #spring.devtools.restart.enabled=true
 #spring.devtools.restart.exclude=static/**,public/**,templates/**  # Exclude directories
+
+
+
+
+spring.profiles.active=${ENV:dev}
