--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,17 @@
 		<url />
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+<!-- 		<java.version>21</java.version> -->
 	</properties>
+<properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+</properties>
+
+	
 	<dependencies>
+
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
