--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,8 @@
 		<url />
 	</scm>
 	<properties>
-<!-- 		<java.version>21</java.version> -->
+		<java.version>21</java.version> 
 	</properties>
-<properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-</properties>
 
 	
 	<dependencies>
